Fix the conversion of md files.